Added more AI features